--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
+    - assets/
+    - assets/locale/en/
+    - assets/locale/es/
+    - assets/json_backend/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
